# getest_framework

gtest/: CMakeLists.txt
gtest/grep_sh/: top.sh
gtest/lib/pkgconfig/: gtest.pc  gtest_main.pc
gtest/src/: add.cpp  main.cpp
